feat: adds jwt logi
